# Huffman

./: .gitignore  CMakeLists.txt  cli.cpp  test.cpp
lib/: huff_tree.cpp  huff_tree.h  huffman.cpp  huffman.h
test_files/: in.txt  out.txt
